--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,8 +3,9 @@
     bottom: 0px;
     left: 0;
     width: 100%;
+    height: 10%;
     text-align: center;
-    background-color: indigo;
+    background-color: rgb(231, 235, 11);;
     color: white;
   }
   
