--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -1,11 +1,10 @@
 .container{
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     padding: 1em;
     background-color: #FFE599;   
     width: 100%;
-align-items: center;
-}
+ }
 .h1T{
     text-shadow: 1px 1px #161414;
     color:rgb(51, 51, 255)
@@ -14,30 +13,70 @@ align-items: center;
     text-shadow: 1px 1px #161414;
     color:rgb(57, 60, 86)
 }
-.emp_container{
+.main_container{
     display: flex;
     flex-direction: column;
+   align-content: center;
+      flex-wrap: wrap;
+    margin-top:  1%;
+    width: 100%;
  
 }
 input[type=text] {
     border-radius: 5px;
     border: 2px solid lightgrey;
     color: #1d2129;
-    margin: 0% 0 3% 3%;
+    margin-left: 5%;
     padding: 2px;
     font-size: 16px;
     width: 50%;
     height: 30;
     border: 1px solid rgb(224, 122, 95); 
-    background-color: rgb(242, 204, 143);
-   
+    background-color: rgb(242, 204, 143);  
 
+}
+.richtxt{
+    border-radius: 5px;
+    border: 2px solid lightgrey;
+    color: #1d2129;
+    margin-left: 10%;
+    padding: 2px;
+    font-size: 16px;
+    width: 50%;
+    height: 30;
+    border: 1px solid rgb(224, 122, 95); 
+    background-color: rgb(242, 204, 143);  
+
+}
+.mainCal-container{
+    display: flex;
+    flex-direction: column;
+    /* margin-right: -4%; */
+align-items: center;
 }
 .calndr_container{
     display: flex;
     margin-top: 2%;
-    /* flex-direction: row; */
-      /* align-items: 'center'; */
+   flex-direction: row; 
+    align-items: 'center';
        justify-content: space-between;
        align-content: space-between;
+}
+.list_container{
+    display: flex;
+    flex-direction: row;
+    /* margin-top: 3%;
+    margin-left: -16%; */
+
+}
+.btn_common {
+    background-color: rgb(242, 204, 143);
+    color: #1d2129;
+    padding: 15px 67px 12px 33px;
+     border-radius: 5px;
+    margin: 1rem;
+   
+    width: 10%;
+    
+   
 }
