--- a/src/pages/Records/Records.css
+++ b/src/pages/Records/Records.css
@@ -17,29 +17,12 @@
     display: flex;
     flex-direction: column;
    align-content: center;
-      /* flex-wrap: wrap; */
+      flex-wrap: wrap;
     margin-top:  1%;
-    width: 100%;    
-    color: #161414;
-    background-color: #FFE599;
-    background: #FFE599;
-      border-radius: 8px; 
+    width: 100%;
+ 
 }
-input {
-    border-radius: 10px;
-    border: 2px solid lightgrey;
-    color: #1d2129;
-    margin: 2% 0; 
-    font-size: 16px;
-     width: 30%;
-    height: 30;
-    border: 1px solid rgb(224, 122, 95); 
-    background-color: rgb(242, 204, 143);
-  
-
-}
-
-/* input[type=text] {
+input[type=text] {
     border-radius: 5px;
     border: 2px solid lightgrey;
     color: #1d2129;
@@ -51,7 +34,7 @@ input {
     border: 1px solid rgb(224, 122, 95); 
     background-color: rgb(242, 204, 143);  
 
-} */
+}
 .richtxt{
     border-radius: 5px;
     border: 2px solid lightgrey;
@@ -91,9 +74,44 @@ align-items: center;
     color: #1d2129;
     padding: 15px 67px 12px 33px;
      border-radius: 5px;
-    margin: 1rem;
-   
+    margin: 1rem;   
     width: 10%;
-    
-   
 }
+.btn_commonbtm {
+    background-color: rgb(242, 204, 143);
+    color: #1d2129;
+    padding: 15px 43px 12px 33px;
+     border-radius: 5px;
+    margin: 1rem;   
+    width: 30%;
+}
+
+
+.app {
+    font-family: sans-serif;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+    height: 100vh;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  }
+  .title {
+    font-size: 22px;
+    margin-bottom: 10px;
+  }
+  .list-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-left: 20px;
+  }
+  .checked-item,
+  .not-checked-item {
+    margin-left: 10px;
+  }
+  .checked-item {
+    text-decoration: line-through;
+  }
