--- a/src/pages/RecordsDashboard/Records.css
+++ b/src/pages/RecordsDashboard/Records.css
@@ -83,8 +83,7 @@ align-items: center;
     padding: 15px 43px 12px 33px;
      border-radius: 5px;
     margin: 1rem;   
-    width: 30%;
-}
+    width: 30%;}
 
 
 .app {
