--- a/src/pages/RecordsDashboard/Records.css
+++ b/src/pages/RecordsDashboard/Records.css
@@ -48,6 +48,19 @@ input[type=text] {
     background-color: rgb(242, 204, 143);  
 
 }
+.richtxtcmt{
+    border-radius: 5px;
+    border: 2px solid lightgrey;
+    color: #1d2129;
+    margin-left: 2%;
+    padding: 2px;
+    font-size: 16px;
+    width: 44%;
+    height: 30;
+    border: 1px solid rgb(224, 122, 95); 
+    background-color: rgb(242, 204, 143);  
+
+}
 .mainCal-container{
     display: flex;
     flex-direction: column;
